--- a/unika-html/unika-html/css/style.css
+++ b/unika-html/unika-html/css/style.css
@@ -802,7 +802,7 @@ a.rotate-box-1:hover, a.rotate-box-2:hover {
 
 
 /* ===== Begin social ===== */
-#social-section {
+#socials-section {
 	padding: 80px 0;
 }
 ul.social-list {
