--- a/unika-html/unika-html/css/style.css
+++ b/unika-html/unika-html/css/style.css
@@ -31,6 +31,15 @@ body .body {
 	background-color: rgba(0, 46, 82, 0.15);
 	padding: 20px;
 }
+.cover1 {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0px;
+	top: 0px;
+
+	padding: 20px;
+}
 .page {
   overflow: hidden;
   background-color: #fff;
@@ -168,19 +177,19 @@ section {
 	transition: all 0.2s ease-in-out;
 }
 .navbar-default .navbar-brand {
-	background-image: url(../img/logo_web.jpeg);
+	background-image: url(../img/logo.png);
 	background-size: auto;
 }
 .navbar-shrink .navbar-brand {
-	background-image: url(../img/logo_web.jpeg);
+	background-image: url(../img/logo.png);
 	background-size: auto;
 }
 .navbar-transparent .navbar-brand {
-	background-image: url(../img/logo_web.jpeg);
+	background-image: url(../img/logo.png);
 	background-size: auto;
 }
 .navbar-inverse .navbar-brand {
-	background-image: url(../img/logo_web.jpeg);
+	background-image: url(../img/logo.png);
 	background-size: auto;
 }
 
@@ -298,7 +307,22 @@ section {
 }
 /* End text carousel intro */
 /* ===== End intro ===== */
+.containerr{
+	margin: 150px auto;
+	width:90%;
+	padding: 8px;
 
+}
+.containerr .card img{
+	float: left;
+	width: 500px;
+	height: 360px;
+	padding: 0 10px 0 0;
+}
+.containerr .card .content{
+	text-align: justify;
+	font-family: verdana;
+}
 
 /* ===== Begin roatet boxes ===== */
 /* Begin rotate box-1 */
@@ -1145,3 +1169,36 @@ p.subtitle {
 	transform: rotate(-45deg);
 }
 /* ===== End buttons ===== */
+
+/* product page */
+.product-img{
+	margin-top: 100px;
+	width: 100%;
+	height: auto;
+}
+.product-card {
+	text-align: center;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	transition: 0.3s;
+	width: 100%;
+	
+  }
+.product-card:hover {
+	padding-left: 5px;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+.product-container {
+	padding: 20px 16px;
+}
+
+.product-card{
+	margin: 0 auto; /* Added */
+	float: none; /* Added */
+	margin-bottom: 5px;
+}
+
+/* ===== industry ===== */
+.img-pos{
+	
+}
