--- a/unika-html/unika-html/css/skin/cool-gray.css
+++ b/unika-html/unika-html/css/skin/cool-gray.css
@@ -46,9 +46,9 @@ a, a:hover, a:focus {
 	background-color: transparent;
 	
 }
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li.active > a {
+/* .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li.active > a {
 	
-}
+} */
 /* Navbar inverse */
 .navbar-inverse {
 	background-color: #111;
