--- a/css/style.css
+++ b/css/style.css
@@ -1220,3 +1220,37 @@ p.subtitle {
 }
 
 /* ===== industry ===== */
+.collapsible {
+
+	
+	margin-top: 20px;
+	background-color: #777;
+	color: white;
+	cursor: pointer;
+	padding: 18px;
+	width: 90%;
+	border: none;
+	text-align: left;
+	outline: none;
+	font-size: 15px;
+  }
+  
+  .active, .collapsible:hover{
+	background-color: #555;
+  }
+  
+  .content2 {
+	
+	width: 90%;
+	padding: 0 18px;
+	display: none;
+	overflow: hidden;
+	background-color: #f1f1f1;
+  }
+  .content3 {
+	
+	width: 90%;
+	padding: 0 18px;
+	
+	background-color: #777;
+  }
