--- a/css/style.css
+++ b/css/style.css
@@ -178,25 +178,25 @@ section {
 	transition: all 0.2s ease-in-out;
 }
 .navbar-default .navbar-brand {
-	background-image: url(../img/main_logo.png);
+	background-image: url(../img/indexpage/logo.jpeg);
 	background-size: contain;
 	width:200px;
 	
 }
 .navbar-shrink .navbar-brand {
-	background-image: url(../img/main_logo.png);
+	background-image: url(../img/indexpage/logo.jpeg);
 	background-size: contain;
 	width:200px;
 	
 }
 .navbar-transparent .navbar-brand {
-	background-image: url(../img/main_logo.png);
+	background-image: url(../img/indexpage/logo.jpeg);
 	background-size: contain;
 	width:200px;
 	
 }
 .navbar-inverse .navbar-brand {
-	background-image: url(../img/main_logo.png);
+	background-image: url(../img/indexpage/logo.jpeg);
 	background-size: contain;
 	width:200px;
 	
